--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npm run build && node server.js",
+    "start": "node server.js",
     "start:dev": "webpack-dev-server --mode=development",
     "build": "webpack --mode=production"
   },
